--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,78 +7,84 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.android.justjava.MainActivity">
+    tools:context="com.example.android.justjava.MainActivity"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="QUANTITY"
         android:paddingBottom="16dp"
-        android:textSize="16sp"/>
+        android:text="QUANTITY"
+        android:textSize="16sp" />
 
-    <Button
-        android:id="@+id/buttom_increase"
-        android:layout_below="@+id/quantity"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="+"
-        android:paddingTop="8dp"
-        android:textSize="16sp"
-        android:onClick="increment"
-        />
-
-    <TextView
-        android:id="@+id/quantity_text_view"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2"
-        android:layout_below="@+id/buttom_increase"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
-        android:textSize="16sp"
-        android:textColor="#000000"/>
+        android:orientation="horizontal"
+        >
 
-    <Button
-        android:id="@+id/buttom_decrease"
-        android:layout_below="@+id/quantity_text_view"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:text="-"
-        android:paddingTop="8dp"
-        android:textSize="16sp"
-        android:onClick="decrement"
-        />
+        <Button
+            android:id="@+id/buttom_decrease"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="decrement"
+            android:paddingTop="8dp"
+            android:text="-"
+            android:textSize="16sp" />
+
+
+        <TextView
+            android:id="@+id/quantity_text_view"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="8dp"
+            android:text="2"
+            android:textColor="#000000"
+            android:textSize="16sp" />
+
+        <Button
+            android:id="@+id/buttom_increase"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:onClick="increment"
+            android:paddingTop="8dp"
+            android:singleLine="false"
+            android:text="+"
+            android:textSize="16sp" />
+
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="PRICE"
+        android:layout_below="@id/buttom_decrease"
         android:paddingBottom="8dp"
         android:paddingTop="16dp"
-        android:textSize="16sp"
-        android:layout_below="@id/buttom_decrease"/>
+        android:text="PRICE"
+        android:textSize="16sp" />
 
     <TextView
         android:id="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$ 0"
         android:layout_below="@+id/price"
-        android:paddingTop="8dp"
         android:paddingBottom="8dp"
-        android:textSize="16sp"
-        android:textColor="#000000"/>
+        android:paddingTop="8dp"
+        android:text="Welcome!"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
     <Button
         android:id="@+id/buttom"
-        android:layout_below="@+id/price_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ORDER"
-        android:paddingTop="8dp"
-        android:textSize="16sp"
+        android:layout_below="@+id/price_text_view"
         android:onClick="submitOrder"
-        />
-</RelativeLayout>
+        android:paddingTop="8dp"
+        android:text="ORDER"
+        android:textSize="16sp" />
+
+</LinearLayout>
