--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,20 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="colorPrimary">#004D40</item>
+        <item name="colorPrimaryDark">#FFFFFF</item>
+        <item name="colorAccent">#004D40</item>
+    </style>
+
+    <style name="order_style">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#004D40</item>
+        <item name="android:textStyle">italic</item>
+    </style>
+
+    <style name="head">
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">20sp</item>
     </style>
 
 </resources>
